--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,16 @@
                 "${workspaceFolder}/VsCodeNew.csproj"
             ],
             "problemMatcher": "$msCompile"
-        }
+        },
+        {
+            "label": "test",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "test",
+                "${workspaceFolder}/VsCodeNew.csproj"
+            ],
+            "problemMatcher": "$msCompile"
+        },
     ]
 }
